--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .container {
