Adicionando a tela notebook

--- a/style.css
+++ b/style.css
@@ -88,4 +88,9 @@ body {
 
 .secundario__botao {
     display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
 }
